src/objects/SMS_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Gateway Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <label>Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>SMS Notifications</relationshipLabel>
        <relationshipName>SMS_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commenced Marketing</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Send Resume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SMS Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Seeker__c</columns>
        <columns>Delivered__c</columns>
        <columns>Delivery_Status__c</columns>
        <columns>Gateway_Reference__c</columns>
        <columns>Message__c</columns>
        <columns>Number__c</columns>
        <columns>Sent__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS{00000}</displayFormat>
        <label>SMS Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>